Update dependencies, testing for DateViewModel.kt and DetailsViewModel.kt; bugfixes